fixed vertical spacing

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 
 .container {
     max-width: 80vw;
-    margin: 5vh auto;
-    padding: 2vh;
+    margin: 3vh auto;
+    padding: 4vh;
     background-color: #fff;
     border-radius: 2vw;
     box-shadow: 0 0 2vw rgba(0, 0, 0, 0.1);
@@ -91,7 +91,7 @@ body {
 
 .team-numbers input {
     width: 14vw;
-    padding: 2vh;
+    padding: 1.5vh;
     margin-bottom: 1vh;
     border: 0.5vh solid #ccc;
     border-radius: 1vw;
@@ -102,6 +102,7 @@ body {
 
 .objectives {
     text-align: center;
+    font-size: 2vh;
 }
 
 .objective {
@@ -119,7 +120,7 @@ body {
 
 .objective input {
     width: 10vw;
-    padding: 2vh;
+    padding: 1vh;
     border: 0.5vh solid #ccc;
     border-radius: 1vw;
 
@@ -134,11 +135,12 @@ body {
 .total-points span {
     font-weight: bold;
     margin-right: 2vw;
+    font-size: 3vh;
 }
 
 .total-points input {
     width: 8vw;
-    padding: 2vh;
+    padding: 1.5vh;
     margin-bottom: 1vh;
     border: 0.5vh solid #ccc;
     border-radius: 1vw;
